--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -40,10 +40,13 @@
 
                 {% for contact in object_list %}
                     <tr>
-                        <td>{{ contact.first_name }}</td>
-                        <td>{{ contact.last_name }}</td>
                         <td>
-                            <a href="{% url 'contact_detail' contact.pk %}">Detail</a> &middot;
+                            <a href="{% url 'contact_detail' contact.pk %}">
+                                {{ contact.first_name }} {{ contact.last_name }}
+                            </a>
+                        </td>
+
+                        <td>
                             <a href="{% url 'contact_edit' contact.pk %}">Edit</a> &middot;
                             <a href="{% url 'contact_delete' contact.pk %}">Delete</a>
                         </td>
