--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,3 +5,8 @@ html {
 .main-background {
     background-color: #F8F9FA;
 }
+
+.shadow {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+
