--- a/templates/contact_delete.html
+++ b/templates/contact_delete.html
@@ -4,7 +4,7 @@
 
     <div class="pb-3">
         <h4>Delete Contact</h4>
-        <form action="" method="post">
+        <form action="" method="POST">
             {% csrf_token %}
             <p>Are you sure you want to the following contact?</p>
             <ul>
