--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -38,7 +38,7 @@
 
             <tbody>
 
-                {% for contact in object_list %}
+                {% for contact in contacts %}
                     <tr>
                         <td style="width: 50%">
                             <a href="{% url 'contact_detail' contact.pk %}">
