Added alphabetic search

--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -4,32 +4,32 @@
 
     <nav class="navbar pb-3">
         <form class="form-inline">
-            <a href="#">A</a> &middot;
-            <a href="#">B</a> &middot;
-            <a href="#">C</a> &middot;
-            <a href="#">D</a> &middot;
-            <a href="#">E</a> &middot;
-            <a href="#">F</a> &middot;
-            <a href="#">G</a> &middot;
-            <a href="#">H</a> &middot;
-            <a href="#">I</a> &middot;
-            <a href="#">J</a> &middot;
-            <a href="#">K</a> &middot;
-            <a href="#">L</a> &middot;
-            <a href="#">M</a> &middot;
-            <a href="#">N</a> &middot;
-            <a href="#">O</a> &middot;
-            <a href="#">P</a> &middot;
-            <a href="#">Q</a> &middot;
-            <a href="#">R</a> &middot;
-            <a href="#">S</a> &middot;
-            <a href="#">T</a> &middot;
-            <a href="#">U</a> &middot;
-            <a href="#">V</a> &middot;
-            <a href="#">W</a> &middot;
-            <a href="#">X</a> &middot;
-            <a href="#">Y</a> &middot;
-            <a href="#">Z</a>
+            <a href="{% url 'contact_alphabet' 'A' %}">A</a> &middot;
+            <a href="{% url 'contact_alphabet' 'B' %}">B</a> &middot;
+            <a href="{% url 'contact_alphabet' 'C' %}">C</a> &middot;
+            <a href="{% url 'contact_alphabet' 'D' %}">D</a> &middot;
+            <a href="{% url 'contact_alphabet' 'E' %}">E</a> &middot;
+            <a href="{% url 'contact_alphabet' 'F' %}">F</a> &middot;
+            <a href="{% url 'contact_alphabet' 'G' %}">G</a> &middot;
+            <a href="{% url 'contact_alphabet' 'H' %}">H</a> &middot;
+            <a href="{% url 'contact_alphabet' 'I' %}">I</a> &middot;
+            <a href="{% url 'contact_alphabet' 'J' %}">J</a> &middot;
+            <a href="{% url 'contact_alphabet' 'K' %}">K</a> &middot;
+            <a href="{% url 'contact_alphabet' 'L' %}">L</a> &middot;
+            <a href="{% url 'contact_alphabet' 'M' %}">M</a> &middot;
+            <a href="{% url 'contact_alphabet' 'N' %}">N</a> &middot;
+            <a href="{% url 'contact_alphabet' 'O' %}">O</a> &middot;
+            <a href="{% url 'contact_alphabet' 'P' %}">P</a> &middot;
+            <a href="{% url 'contact_alphabet' 'Q' %}">Q</a> &middot;
+            <a href="{% url 'contact_alphabet' 'R' %}">R</a> &middot;
+            <a href="{% url 'contact_alphabet' 'S' %}">S</a> &middot;
+            <a href="{% url 'contact_alphabet' 'T' %}">T</a> &middot;
+            <a href="{% url 'contact_alphabet' 'U' %}">U</a> &middot;
+            <a href="{% url 'contact_alphabet' 'V' %}">V</a> &middot;
+            <a href="{% url 'contact_alphabet' 'W' %}">W</a> &middot;
+            <a href="{% url 'contact_alphabet' 'X' %}">X</a> &middot;
+            <a href="{% url 'contact_alphabet' 'Y' %}">Y</a> &middot;
+            <a href="{% url 'contact_alphabet' 'Z' %}">Z</a>
         </form>
     </nav>
 
