--- a/templates/contact_edit.html
+++ b/templates/contact_edit.html
@@ -4,7 +4,7 @@
 
     <div class="pb-3">
         <h4>Edit Contact</h4>
-        <form action="" method="post">
+        <form action="" method="POST">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">Update</button>
