--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,6 @@ html {
     background-color: #F8F9FA;
 }
 
-.shadow {
-    /* box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px; */
+.outline {
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
-
