--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-7 px-5 py-4 mt-5 rounded bg-white shadow">
+                <div class="col-7 px-5 py-4 mt-5 rounded bg-white outline">
 
                     <nav class="navbar">
                         <form class="form-inline">
