--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,3 +9,11 @@ html {
 .outline {
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
+
+.text-gray {
+    color:#BBBBBB;
+}
+
+.navbar-color {
+    background-color: #FFFFFF;
+}
