--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <nav class="navbar pb-3">
+    <nav class="navbar mb-3">
         <form class="form-inline">
             <a href="{% url 'contact_alphabet' 'A' %}">A</a> &middot;
             <a href="{% url 'contact_alphabet' 'B' %}">B</a> &middot;
