--- a/templates/contact_detail.html
+++ b/templates/contact_detail.html
@@ -4,54 +4,144 @@
 
     <div class="table-responsive py-3">
         <table class="table table-bordered">
-
           <tbody>
+
             <tr>
               <th scope="row">Name:</th>
               <td>{{ contact.first_name }} {{ contact.last_name }}</td>
             </tr>
+
             <tr>
               <th scope="row">Nickname:</th>
-              <td>{{ contact.nickname }}</td>
+              <td>
+                {% if contact.nickname %}
+                  {{ contact.nickname }}
+                {% else %}
+                  <div class="text-gray">
+                    None
+                  </div>
+                {% endif %}
+              </td>
             </tr>
+
             <tr>
               <th scope="row">Address:</th>
-              <td>{{ contact.postal_address }}</td>
+                <td>
+                  {% if contact.postal_address %}
+                    {{ contact.postal_address }}
+                  {% else %}
+                    <div class="text-gray">
+                      None
+                    </div>
+                  {% endif %}
+                </td>
             </tr>
+
             <tr>
               <th scope="row">Phone:</th>
-              <td>{{ contact.phone_number }}</td>
+              <td>
+                {% if contact.phone_number %}
+                  {{ contact.phone_number }}
+                {% else %}
+                  <div class="text-gray">
+                    None
+                  </div>
+                {% endif %}
+              </td>
             </tr>
+
             <tr>
               <th scope="row">Email:</th>
-              <td>{{ contact.email_address}}</td>
+              <td>
+                {% if contact.email_address %}
+                  {{ contact.email_address }}
+                {% else %}
+                  <div class="text-gray">
+                    None
+                  </div>
+                {% endif %}
+              </td>
             </tr>
+
             <tr>
               <th scope="row">LinkedIn:</th>
-              <td><a href="{{ contact.linkedin_url }}" target="_blank">{{ contact.linkedin_url }}</a></td>
+              <td>
+                {% if contact.linkedin_url %}
+                  <a href="{{ contact.linkedin_url }}" target="_blank">{{ contact.linkedin_url }}</a>
+                {% else %}
+                  <div class="text-gray">
+                    None
+                  </div>
+                {% endif %}
+              </td>
             </tr>
+
             <tr>
               <th scope="row">Twitter:</th>
-              <td><a href="{{ contact.twitter_url }}" target="_blank">{{ contact.twitter_url }}</a></td>
+              <td>
+                {% if contact.twitter_url %}
+                  <a href="{{ contact.twitter_url }}" target="_blank">{{ contact.twitter_url }}</a>
+                {% else %}
+                  <div class="text-gray">
+                    None
+                  </div>
+                {% endif %}
+              </td>
             </tr>
+
+            <tr>
+              <th scope="row">GitHub:</th>
+              <td>
+                {% if contact.github_url %}
+                  <a href="{{ contact.github_url }}" target="_blank">{{ contact.github_url }}</a>
+                {% else %}
+                  <div class="text-gray">
+                    None
+                  </div>
+                {% endif %}
+              </td>
+            </tr>
+
             <tr>
               <th scope="row">Website:</th>
-              <td><a href="{{ contact.personal_website }}" target="_blank">{{ contact.personal_website }}</a></td>
+              <td>
+                {% if contact.personal_website %}
+                  <a href="{{ contact.personal_website }}" target="_blank">{{ contact.personal_website }}</a>
+                {% else %}
+                  <div class="text-gray">
+                    None
+                  </div>
+                {% endif %}
+              </td>
             </tr>
+
             <tr>
               <th scope="row">Created:</th>
-              <td>{{ contact.created_on }}</td>
+              <td>
+                {{ contact.created_on }}
+              </td>
             </tr>
+
             <tr>
               <th scope="row">Updated:</th>
-              <td>{{ contact.last_modified_on }}</td>
+              <td>
+                {% if contact.last_modified_on %}
+                  {{ contact.last_modified_on }}
+                {% else %}
+                  <div class="text-gray">
+                    Never
+                  </div>
+                {% endif %}
+              </td>
             </tr>
-          </tbody>
 
+          </tbody>
         </table>
 
-        <a href="{% url 'contact_edit' contact.pk %}">Edit</a> &middot;
-        <a href="{% url 'contact_delete' contact.pk %}">Delete</a>
+        <div class="float-right pt-3">
+          <a class="btn btn-outline-primary" role="button" href="{% url 'contact_edit' contact.pk %}">Edit</a>
+          <a class="btn btn-outline-primary" role="button" href="{% url 'contact_delete' contact.pk %}">Delete</a>
+        </div>
 
       </div>
 
