Alert added if no contact found

--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -55,7 +55,9 @@
 
                 {% empty %}
 
-                    <p>No contacts found.</p>
+                    <div class="alert alert-info" role="alert">
+                        No contacts found.
+                    </div>
 
                 {% endfor %}
 
