--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,6 +2,9 @@ html {
     background-color: #F8F9FA;
 }
 
+.display-img {
+    border-radius: 50%;}
+
 .main-background {
     background-color: #F8F9FA;
 }
