--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load cropping %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,9 +8,10 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <title>{% block title %}Contacts{% endblock title %}</title>
-    </head>
+    {{ form.media }}
+</head>
 <body>
-    <main class="main-background">
+    <main class="main-background mb-5">
 
         <div class="container">
             <div class="row justify-content-center">
