--- a/templates/contact_detail.html
+++ b/templates/contact_detail.html
@@ -1,10 +1,19 @@
 {% extends 'base.html' %}
 
+{% load cropping %}
+
 {% block content %}
 
     <div class="table-responsive py-3">
         <table class="table table-bordered">
           <tbody>
+
+            <tr>
+              <th scope="row">Picture:</th>
+              <td>
+                <img class="display-img" src="{% cropped_thumbnail contact 'cropping' scale=0.75 %}">
+              </td>
+            </tr>
 
             <tr>
               <th scope="row">Name:</th>
@@ -140,7 +149,7 @@
 
         <div class="float-right pt-3">
           <a class="btn btn-outline-primary" role="button" href="{% url 'contact_edit' contact.pk %}">Edit</a>
-          <a class="btn btn-outline-primary" role="button" href="{% url 'contact_delete' contact.pk %}">Delete</a>
+          <a class="btn btn-outline-danger" role="button" href="{% url 'contact_delete' contact.pk %}">Delete</a>
         </div>
 
       </div>
