--- a/templates/contact_edit.html
+++ b/templates/contact_edit.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load cropping %}
+
 {% block content %}
 
     <div class="pb-3">
@@ -11,6 +13,5 @@
             <a href="{% url 'contact_list' %}">Cancel</a>
         </form>
     </div>
-
 
 {% endblock content %}
