--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load cropping %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,8 +6,9 @@
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>{% block title %}Contacts{% endblock title %}</title>
-    {{ form.media }}
+    <title>Contacts</title>
+    {% block head_mixin %}
+    {% endblock head_mixin %}
 </head>
 <body>
     <main class="main-background mb-5">
