--- a/templates/contact_edit.html
+++ b/templates/contact_edit.html
@@ -1,14 +1,19 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
 {% load cropping %}
+
+{% block head_mixin %}
+    {{ form.media }}
+{% endblock head_mixin %}
 
 {% block content %}
 
     <div class="pb-3">
         <h4>Edit Contact</h4>
-        <form action="" method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form.as_p }}
+            {{ form|crispy }}
             <button type="submit">Update</button>
             <a href="{% url 'contact_list' %}">Cancel</a>
         </form>
