--- a/templates/contact_edit.html
+++ b/templates/contact_edit.html
@@ -5,13 +5,17 @@
 {% block content %}
 
     <div class="pb-3">
+
         <h4>Edit Contact</h4>
-        <form action="" method="POST" enctype="multipart/form-data">
+
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit">Update</button>
-            <a href="{% url 'contact_list' %}">Cancel</a>
+            <button type="submit" class="btn btn-outline-primary mr-3">Update</button>
         </form>
+
+        <a class="btn btn-outline-primary" role="button" href="{% url 'contact_list' %}">Cancel</a>
+
     </div>
 
 {% endblock content %}
