--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load thumbnail %}
+{% load static %}
 
 {% block content %}
 
@@ -45,13 +45,15 @@
                     <tr>
                         <td style="width: 10%">
 
-                            {% thumbnail item.image "100x100" crop="center" as im %}
-                                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-                            {% endthumbnail %}
-
-                            <a href="{% url 'contact_detail' contact.pk %}">
-                                <img src="{{ contact.profile_picture.url }}" alt="Profile picture" class="display-img" >
-                            </a>
+                            {% if contact.profile_picture %}
+                                <a href="{% url 'contact_detail' contact.pk %}">
+                                    <img src="{{ contact.profile_picture.url }}" alt="Profile picture" class="list-img" >
+                                </a>
+                            {% else %}
+                                <a href="{% url 'contact_detail' contact.pk %}">
+                                    <img src="{% static 'images/default_profile_image.png' %}" alt="Profile picture" class="list-img" >
+                                </a>
+                            {% endif %}
                         </td>
 
                         <td style="width: 60%" class="align-middle">
