--- a/templates/contact_new.html
+++ b/templates/contact_new.html
@@ -8,79 +8,13 @@
 
         <h4>New Contact</h4>
 
-        <form action="" method="POST" enctype="multipart/form-data">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-
-
-            <div class="form-group mb-3">
-                {{ form.profile_picture|as_crispy_field }}
-            </div>
-
-            
-            <div class="form-group mb-3">
-                {{ form.first_name|as_crispy_field }}
-            </div>
-
-
-
-            <div class="form-group mb-3">
-                {{ form.last_name|as_crispy_field }}
-            </div>
-
-
-
-            <div class="form-group mb-3">
-                {{ form.nickname|as_crispy_field }}
-            </div>
-
-
-
-            <div class="form-group mb-3">
-                {{ form.postal_address|as_crispy_field }}
-            </div>
-
-
-
-            <div class="form-group mb-3">
-                {{ form.phone_number|as_crispy_field }}
-            </div>
-
-
-
-            <div class="form-group mb-3">
-                {{ form.email_address|as_crispy_field }}
-            </div>
-
-
-
-            <div class="form-group mb-3">
-                {{ form.linkedin_url|as_crispy_field }}
-            </div>
-
-
-
-            <div class="form-group mb-3">
-                {{ form.twitter_url|as_crispy_field }}
-            </div>
-
-
-
-            <div class="form-group mb-3">
-                {{ form.github_url|as_crispy_field }}
-            </div>
-
-
-
-            <div class="form-group mb-4">
-                {{ form.personal_website|as_crispy_field }}
-            </div>
-
-
+            {{ form|crispy }}
             <button type="submit" class="btn btn-outline-primary mr-3">Save</button>
-
-            <a class="btn btn-outline-primary" role="button" href="{% url 'contact_list' %}">Cancel</a>
-
         </form>
+
+        <a class="btn btn-outline-primary" role="button" href="{% url 'contact_list' %}">Cancel</a>
 
     </div>
 
