--- a/templates/contact_edit.html
+++ b/templates/contact_edit.html
@@ -1,17 +1,21 @@
 {% extends 'base.html' %}
 
-{% load cropping %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
     <div class="pb-3">
+
         <h4>Edit Contact</h4>
-        <form action="" method="POST">
+
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Update</button>
-            <a href="{% url 'contact_list' %}">Cancel</a>
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-outline-primary mr-3">Update</button>
         </form>
+
+        <a class="btn btn-outline-primary" role="button" href="{% url 'contact_list' %}">Cancel</a>
+
     </div>
 
 {% endblock content %}
