--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load cropping %}
+{% load static %}
 
 {% block content %}
 
@@ -36,7 +36,7 @@
     </nav>
 
     <div class="table-responsive">
-        <table class="table table-bordered">
+        <table class="table">
 
             <tbody>
 
@@ -45,19 +45,26 @@
                     <tr>
                         <td style="width: 10%">
                             <a href="{% url 'contact_detail' contact.pk %}">
-                                <img class="display-img" src="{% cropped_thumbnail contact 'cropping' scale=0.2 %}">
+                                <img src="{{ contact.get_profile_picture_url }}" alt="Profile picture" class="list-img" >
                             </a>
                         </td>
 
-                        <td style="width: 50%" class="align-middle">
+                        <td style="width: 60%" class="align-middle">
                             <a href="{% url 'contact_detail' contact.pk %}">
                                 {{ contact.first_name }} {{ contact.last_name }}
                             </a>
+                            {% if contact.nickname %}
+                                <span class="text-gray">
+                                    &nbsp({{ contact.nickname }})
+                                </span>
+                            {% endif %}
                         </td>
 
-                        <td style="width: 40%" class="align-middle">
-                            <a href="{% url 'contact_edit' contact.pk %}">Edit</a> &middot;
-                            <a href="{% url 'contact_delete' contact.pk %}">Delete</a>
+                        <td style="width: 30%" class="align-middle">
+
+                            <a class="btn btn-sm btn-outline-primary" role="button" href="{% url 'contact_edit' contact.pk %}">Edit</a>
+                            <a class="btn btn-sm btn-outline-danger" role="button" href="{% url 'contact_delete' contact.pk %}">Delete</a>
+
                         </td>
                     </tr>
 
