--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
@@ -19,11 +22,13 @@
 
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-7 px-5 py-4 mt-5 rounded bg-white outline">
+                <div class="col-5 px-5 py-4 mt-5 rounded bg-white outline">
 
-                    <nav class="navbar navbar-light navbar-color my-2">
-                        <div class="float-right">
+                    <nav class="navbar my-3">
+                        <div class="col text-center">
                             <a class="btn btn-outline-primary" role="button" href="{% url 'contact_list' %}">All Contacts</a>
+                        </div>
+                        <div class="col text-center">
                             <a class="btn btn-outline-primary" role="button" href="{% url 'contact_new' %}">New Contact</a>
                         </div>
                     </nav>
